--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "priyanka-deshmukh8",
-  "author": "Sagar Bera",
+  "author": "Priyanka Deshmukh",
   "description": "A full-stack open source project. To learn and getting started with open source. The project is being made on top of React and NextJs framework",
   "version": "0.1.0",
   "private": true,
